# openzed

./: .gitmodules  CMakeLists.txt  main.cpp
submodule/libusb/: CMakeLists.txt
submodule/libuvc/: CMakeLists.txt
